<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- English language version -->
    <string name="app_name">MyGuide</string>
    <string name="notif_text">Application is running in the background...</string>

    <!-- Welcome screen -->
    <string name="header_main_screen">Welcome to the guide\nWroclaw Zoo</string>
    <string name="close">Close</string>
    <string name="tickets_and_times">Tickets and times</string>
    <string name="how_to_get">How to get</string>
    <string name="sightseeing">Sightseeing</string>
    <string name="information">Information</string>
    <string name="options">Options</string>
    <string name="logo_Description">Zoo Logo</string>
    <string name="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
        Proin nibh augue, suscipit a, scelerisque sed, lacinia in, mi. Cras vel lorem. 
        Etiam pellentesque aliquet tellus. Phasellus pharetra nulla ac diam.</string>
    <string name="play_services_unavailable">Google Play services, which main application features 
        rely on, is not available on this device. MyGuide can not be lunched.
        Services can be downloaded directly from Google Play.</string>
        
    <!-- General -->
    <string name="visiting_animal_toast">You are visiting animal: </string>

    <!-- Dialogs -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="confirmation_default">Continue?</string>
    <string name="confirmation_exit">Close an application?</string>
    <string name="progress_dialog_title">Please wait</string>
    <string name="progress_dialog_message">Reading xml file with data.</string>
    <string name="go_to_option">Go to options</string>
    <string name="start_without_gps">Start without GPS</string>
    <string name="gps_enable_dialog_msg">Enable GPS to use all application features:</string>
    <string name="gps_loading_position">Your position is being updated...</string>
    <string name="view_map">Map of the Zoo</string>
    <string name="to_far_from_zoo">You are far away from the Zoo. Would you like to see
        how to get there instead of sightseeing map?</string>
    <string name="activity_not_found">Could not find compatible application!</string>

    <!-- SplashActivity -->
    <string name="splash_dialog_error_title">Application error</string>
    <string name="splash_dialog_error_message">A fatal error occured and application can not be started.</string>

    <!-- SightSeeing screen -->
    <string name="search_sightseeing">Search&#8230;</string>
    <string name="search_sightseeing_not">Animal not found</string>
    <string name="sliding_icon_Description">Opcje</string>
    <string name="route_icon_Description">Droga</string>
    <string name="drawer_open">Otwórz menu</string>
    <string name="drawer_close">Zamknij menu</string>
    <string name="navigate_to">Navigation destination:&#160;</string>

    <!-- SightSeeing menu -->
    <string-array name="nav_drawer_items">
        <item name="map">Map</item>
        <item name="navigation_mode">Navigation</item>
        <item name="animals">Animals</item>
        <item name="events">Events</item>
        <item name="information">Information</item>
        <item name="history">History</item>
        <item name="gastronomy">Gastronomy</item>
    </string-array>

    <!-- Animals description tabs name -->
    <string-array name="animal_desc_tabs_name">
        <item name="description">Description</item>
        <item name="map_view">Map</item>
    </string-array>

    <!-- Animal List title -->
    <string name="animal_list_title">Animals</string>
    <string name="animal_image">Animal Image</string>
    <string name="animal_info_not_found">No detailed information about the animal.</string>

    <!-- Gastronomy description tabs -->
    <string-array name="gastronomy_desc_tabs_name">
        <item name="description">Menu</item>
        <item name="menu">Map</item>
    </string-array>

    <!-- Nearest animals -->
    <string name="nearest_animals_title">Nearest animals</string>
    <string name="nearest_animals_waiting_toast">Calculating distances&#8230;</string>
    <string name="nearest_animal_label_text">The closest animal</string>

    <!-- Placeholders for Custom_Animal_Row -->
    <string name="custom_row_placeholder_name">Animal name</string>
    <string name="custom_row_placeholder_distance">100m</string>
    <string name="custom_row_placeholder_fact">Fun fact</string>

    <!-- Track list -->
    <string name="exploration">Exploration</string>
    <string name="start_track">START</string>

    <!-- Gastronomy Item List -->
    <string name="menu_item_list">Menu:</string>
    <string name="open_item_list">Opening hours:</string>
    <string name="time_to_item_list">Time:</string>
    <string name="gastronomy_list_title">Gastronomy</string>

    <!-- Content Description -->
    <string name="gastronomy_list_image">Gastronomy List Image</string>

    <!-- Events -->
    <string name="events_list_title">Events</string>
    <string name="placeholder_time">11:00</string>
    <string name="placeholder_name">Event Name</string>
    <string name="event_start">Start time:</string>
    <string name="event_weekends">Weekends:</string>
    <string name="event_holidays">Holidays:</string>
    <string name="event_date">Start date:</string>

    <!-- Information tabs name -->
    <string name="information_ab_title">Information</string>

    <string-array name="information_tabs_name">
        <item name="tickets">Tickets</item>
        <item name="getthere">Get to ZOO</item>
        <item name="contact">Contact</item>
    </string-array>

    <string name="ticket_individual">Individual tickets</string>
    <string name="ticket_group">Group tickets</string>
    <string name="ticket_info">Information</string>
    <string name="contact_openings">ZOO Opening Times</string>
    <string name="contact_contact">Contact</string>
    <string name="contact_weekdays">mon-fri</string>
    <string name="contact_weekends">weekends &amp; holidays</string>
    
    <!-- History -->
    <string name="history_list_title">History</string>

    <string name="clear_track">Clear track</string>
    
    <string name="more_info">more information</string>

    <string name="select_animal">Select</string>
    <string name="unselect_animal">Unselect</string>

</resources>
