<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/background_image"
        android:contentDescription="@string/logo_Description"
        style="@style/welcome_image"
        android:src="@drawable/zoologo" />
    
    <TextView
        android:id="@+id/welcome_text"
        style="@style/welcome_text"
        android:layout_below="@+id/background_image"
        android:text="@string/header_main_screen" />

    <TextView
        android:id="@+id/extra_text"
        style="@style/main_screen_text"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/welcome_text"
        android:text="@string/text" />

    <LinearLayout
        android:id="@+id/linearLayout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/button_tickets"
            style="@style/button_main"
            android:text="@string/tickets_and_times" />

        <Button
            android:id="@+id/button_get"
            style="@style/button_main"
            android:text="@string/how_to_get" />

        <Button
            android:id="@+id/button_sightseeing"
            style="@style/button_main"
            android:text="@string/sightseeing" />
    </LinearLayout>
    
</RelativeLayout>