<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:id="@+id/rlMainActivity" >

    <ImageView
        android:id="@+id/imgvBackgroundImage"
        style="@style/welcome_image"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo_Description"
        android:src="@drawable/zoologo" />
    
    <TextView
        android:id="@+id/txtvWelcomeTextView"
        style="@style/header_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgvBackgroundImage"
        android:text="@string/header_main_screen" />

    <TextView
        android:id="@+id/txtvExtraTextView"
        style="@style/centred_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtvWelcomeTextView"
        android:text="@string/text" />

    <LinearLayout
        android:id="@+id/llMainScreenButtons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/btnGoTickets"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/tickets_and_times" />

        <Button
            android:id="@+id/btnHowToGet"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/how_to_get" />

        <Button
            android:id="@+id/btnSightseeing"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/sightseeing" />
        
    </LinearLayout>
    
</RelativeLayout>