<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtvClosestAnimalLabel"
        style="@style/item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_accent"
        android:padding="3dp"
        android:text="@string/nearest_animal_label_text"
        android:textColor="@color/light_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_background" >

        <ImageView
            android:id="@+id/imgvClosestAnimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/animal_image"
            android:src="@drawable/placeholder_animal_icon" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/txtvClosestAnimalDistance"
                style="@style/item_name"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_margin="15dp"
                android:gravity="right"
                android:text="@string/custom_row_placeholder_distance"
                android:textAllCaps="false" />

            <TextView
                android:id="@+id/txtvClosestAnimalFunFact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/txtvClosestAnimalName"
                android:layout_below="@+id/txtvClosestAnimalName"
                android:layout_toLeftOf="@+id/txtvClosestAnimalDistance"
                android:text="@string/custom_row_placeholder_fact"
                android:textColor="@color/main_text"
                android:textSize="@dimen/Item_text_size" />

            <TextView
                android:id="@+id/txtvClosestAnimalName"
                style="@style/item_name"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_toLeftOf="@+id/txtvClosestAnimalDistance"
                android:text="@string/custom_row_placeholder_name" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>