<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    android:layout_centerInParent="true" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="14sp"
            android:minLines="2"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:text="@string/gps_enable_dialog_msg"/>
        
        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal" >
        
        <Button
            android:id="@+id/btnDontUseGps"
            android:background="@drawable/rounded_btn_dark_gray"
            style="@style/dialog_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_without_gps" />

        <Button
            android:id="@+id/btnGoToSettings"
            android:background="@drawable/rounded_btn_white"
            android:textStyle="bold"
            style="@style/dialog_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_to_option" />
        
        </LinearLayout>

</LinearLayout>
